# knight-swap

./: CMakeLists.txt
src/: BoardState.h  BoardStateBuilder.h  InputData.h  InstanceInfo.h  InstanceInfoBuilder.h  Solver.h  SolverMaster.h  SolverSlave.h  Types.h  main.cpp
test/inputs/: in_0001.txt  in_0012.txt  in_0014.txt  in_0015.txt  in_0016.txt  in_1001.txt
test/instances/: in_0002.txt  in_0010.txt  in_0017.txt
test/outputs/: out_0001.txt  out_0002.txt  out_0010.txt  out_0012.txt  out_0014.txt  out_0015.txt  out_0016.txt  out_0017.txt  out_1001.txt
